backend/stderr.log
Exception ignored in: <_io.TextIOWrapper name='<stdout>' mode='w' encoding='utf-8'>
BrokenPipeError: [Errno 32] Broken pipe
node:internal/modules/package_json_reader:93
        throw error;
        ^

SyntaxError: Error parsing /home/ttalen94/backend/package.json: Unexpected non-whitespace character after JSON at position 9
    at parse (<anonymous>)
    at read (node:internal/modules/package_json_reader:80:16)
    at readPackage (node:internal/modules/package_json_reader:141:10)
    at Object.readPackageScope (node:internal/modules/package_json_reader:164:19)
    at Module._extensions..js (node:internal/modules/cjs/loader:1507:35)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:48:15) {
  path: '/home/ttalen94/backend/package.json'
}

Node.js v20.17.0
node:internal/modules/package_json_reader:93
        throw error;
        ^

SyntaxError: Error parsing /home/ttalen94/backend/package.json: Unexpected non-whitespace character after JSON at position 9
    at parse (<anonymous>)
    at read (node:internal/modules/package_json_reader:80:16)
    at readPackage (node:internal/modules/package_json_reader:141:10)
    at Object.readPackageScope (node:internal/modules/package_json_reader:164:19)
    at Module._extensions..js (node:internal/modules/cjs/loader:1507:35)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:48:15) {
  path: '/home/ttalen94/backend/package.json'
}

Node.js v20.17.0
node:internal/modules/package_json_reader:93
        throw error;
        ^

SyntaxError: Error parsing /home/ttalen94/backend/package.json: Expected ',' or '}' after property value in JSON at position 116
    at parse (<anonymous>)
    at read (node:internal/modules/package_json_reader:80:16)
    at readPackage (node:internal/modules/package_json_reader:141:10)
    at Object.readPackageScope (node:internal/modules/package_json_reader:164:19)
    at Module._extensions..js (node:internal/modules/cjs/loader:1507:35)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:48:15) {
  path: '/home/ttalen94/backend/package.json'
}

Node.js v20.17.0
node:internal/modules/package_json_reader:93
        throw error;
        ^

SyntaxError: Error parsing /home/ttalen94/backend/package.json: Expected ',' or '}' after property value in JSON at position 116
    at parse (<anonymous>)
    at read (node:internal/modules/package_json_reader:80:16)
    at readPackage (node:internal/modules/package_json_reader:141:10)
    at Object.readPackageScope (node:internal/modules/package_json_reader:164:19)
    at Module._extensions..js (node:internal/modules/cjs/loader:1507:35)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:48:15) {
  path: '/home/ttalen94/backend/package.json'
}

Node.js v20.17.0
node:internal/modules/package_json_reader:93
        throw error;
        ^

SyntaxError: Error parsing /home/ttalen94/backend/package.json: Expected ',' or '}' after property value in JSON at position 116
    at parse (<anonymous>)
    at read (node:internal/modules/package_json_reader:80:16)
    at readPackage (node:internal/modules/package_json_reader:141:10)
    at Object.readPackageScope (node:internal/modules/package_json_reader:164:19)
    at Module._extensions..js (node:internal/modules/cjs/loader:1507:35)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:48:15) {
  path: '/home/ttalen94/backend/package.json'
}

Node.js v20.17.0
